.metadata/.plugins/org.eclipse.cdt.ui/drum_rev5.build.log
23:45:17 **** Incremental Build of configuration Debug for project drum_rev5 ****
make all 
Building file: ../startup/startup_stm32f373xc.s
Invoking: MCU GCC Assembler
/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Debug
arm-none-eabi-as -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -g -o "startup/startup_stm32f373xc.o" "../startup/startup_stm32f373xc.s"
Finished building: ../startup/startup_stm32f373xc.s
 
Building file: ../Src/adc.c
Invoking: MCU GCC Compiler
/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Debug
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 '-D__weak=__attribute__((weak))' '-D__packed="__attribute__((__packed__))"' -DUSE_HAL_DRIVER -DSTM32F373xC -I"/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Inc" -I"/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Drivers/STM32F3xx_HAL_Driver/Inc" -I"/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Drivers/STM32F3xx_HAL_Driver/Inc/Legacy" -I"/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Middlewares/ST/STM32_TouchSensing_Library/inc" -I"/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Drivers/CMSIS/Device/ST/STM32F3xx/Include" -I"/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Drivers/CMSIS/Include"  -O3 -g3 -Wall -fmessage-length=0 -ffunction-sections -fdata-sections -c -fmessage-length=0 -MMD -MP -MF"Src/adc.d" -MT"Src/adc.o" -o "Src/adc.o" "../Src/adc.c"
Finished building: ../Src/adc.c
 
Building file: ../Src/dac.c
Invoking: MCU GCC Compiler
/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Debug
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 '-D__weak=__attribute__((weak))' '-D__packed="__attribute__((__packed__))"' -DUSE_HAL_DRIVER -DSTM32F373xC -I"/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Inc" -I"/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Drivers/STM32F3xx_HAL_Driver/Inc" -I"/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Drivers/STM32F3xx_HAL_Driver/Inc/Legacy" -I"/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Middlewares/ST/STM32_TouchSensing_Library/inc" -I"/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Drivers/CMSIS/Device/ST/STM32F3xx/Include" -I"/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Drivers/CMSIS/Include"  -O3 -g3 -Wall -fmessage-length=0 -ffunction-sections -fdata-sections -c -fmessage-length=0 -MMD -MP -MF"Src/dac.d" -MT"Src/dac.o" -o "Src/dac.o" "../Src/dac.c"
Finished building: ../Src/dac.c
 
Building file: ../Src/dma.c
Invoking: MCU GCC Compiler
/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Debug
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 '-D__weak=__attribute__((weak))' '-D__packed="__attribute__((__packed__))"' -DUSE_HAL_DRIVER -DSTM32F373xC -I"/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Inc" -I"/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Drivers/STM32F3xx_HAL_Driver/Inc" -I"/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Drivers/STM32F3xx_HAL_Driver/Inc/Legacy" -I"/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Middlewares/ST/STM32_TouchSensing_Library/inc" -I"/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Drivers/CMSIS/Device/ST/STM32F3xx/Include" -I"/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Drivers/CMSIS/Include"  -O3 -g3 -Wall -fmessage-length=0 -ffunction-sections -fdata-sections -c -fmessage-length=0 -MMD -MP -MF"Src/dma.d" -MT"Src/dma.o" -o "Src/dma.o" "../Src/dma.c"
Finished building: ../Src/dma.c
 
Building file: ../Src/eeprom.c
Invoking: MCU GCC Compiler
/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Debug
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 '-D__weak=__attribute__((weak))' '-D__packed="__attribute__((__packed__))"' -DUSE_HAL_DRIVER -DSTM32F373xC -I"/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Inc" -I"/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Drivers/STM32F3xx_HAL_Driver/Inc" -I"/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Drivers/STM32F3xx_HAL_Driver/Inc/Legacy" -I"/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Middlewares/ST/STM32_TouchSensing_Library/inc" -I"/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Drivers/CMSIS/Device/ST/STM32F3xx/Include" -I"/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Drivers/CMSIS/Include"  -O3 -g3 -Wall -fmessage-length=0 -ffunction-sections -fdata-sections -c -fmessage-length=0 -MMD -MP -MF"Src/eeprom.d" -MT"Src/eeprom.o" -o "Src/eeprom.o" "../Src/eeprom.c"
Finished building: ../Src/eeprom.c
 
Building file: ../Src/gpio.c
Invoking: MCU GCC Compiler
/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Debug
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 '-D__weak=__attribute__((weak))' '-D__packed="__attribute__((__packed__))"' -DUSE_HAL_DRIVER -DSTM32F373xC -I"/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Inc" -I"/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Drivers/STM32F3xx_HAL_Driver/Inc" -I"/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Drivers/STM32F3xx_HAL_Driver/Inc/Legacy" -I"/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Middlewares/ST/STM32_TouchSensing_Library/inc" -I"/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Drivers/CMSIS/Device/ST/STM32F3xx/Include" -I"/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Drivers/CMSIS/Include"  -O3 -g3 -Wall -fmessage-length=0 -ffunction-sections -fdata-sections -c -fmessage-length=0 -MMD -MP -MF"Src/gpio.d" -MT"Src/gpio.o" -o "Src/gpio.o" "../Src/gpio.c"
Finished building: ../Src/gpio.c
 
Building file: ../Src/hardware_io.c
Invoking: MCU GCC Compiler
/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Debug
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 '-D__weak=__attribute__((weak))' '-D__packed="__attribute__((__packed__))"' -DUSE_HAL_DRIVER -DSTM32F373xC -I"/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Inc" -I"/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Drivers/STM32F3xx_HAL_Driver/Inc" -I"/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Drivers/STM32F3xx_HAL_Driver/Inc/Legacy" -I"/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Middlewares/ST/STM32_TouchSensing_Library/inc" -I"/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Drivers/CMSIS/Device/ST/STM32F3xx/Include" -I"/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Drivers/CMSIS/Include"  -O3 -g3 -Wall -fmessage-length=0 -ffunction-sections -fdata-sections -c -fmessage-length=0 -MMD -MP -MF"Src/hardware_io.d" -MT"Src/hardware_io.o" -o "Src/hardware_io.o" "../Src/hardware_io.c"
../Src/hardware_io.c: In function 'handleCoversionSlow':
../Src/hardware_io.c:48:13: warning: unused variable 'pwmCounter' [-Wunused-variable]
  static int pwmCounter;
             ^~~~~~~~~~
In file included from /Users/willmitchell/Documents/stm32_workspace/drum_rev5/Drivers/STM32F3xx_HAL_Driver/Inc/stm32f3xx_hal_tim.h:1383:0,
                 from /Users/willmitchell/Documents/stm32_workspace/drum_rev5/Inc/stm32f3xx_hal_conf.h:308,
                 from /Users/willmitchell/Documents/stm32_workspace/drum_rev5/Drivers/STM32F3xx_HAL_Driver/Inc/stm32f3xx_hal.h:46,
                 from ../Src/hardware_io.c:1:
../Src/hardware_io.c: In function 'updateRGBAudio':
../Src/hardware_io.c:106:37: error: 'audioRateInputs {aka struct <anonymous>}' has no member named 'cv3Input'; did you mean 'gateInput'?
  SET_GREEN_LED(__USAT((inputBuffer->cv3Input[BUFFER_SIZE] + controls->knob3Value - 2048), 12) >> 1);
                                     ^
/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Drivers/STM32F3xx_HAL_Driver/Inc/stm32f3xx_hal_tim_ex.h:922:81: note: in definition of macro '__HAL_TIM_SET_COMPARE'
 (*(__IO uint32_t *)(&((__HANDLE__)->Instance->CCR1) + ((__CHANNEL__) >> 2U)) = (__COMPARE__))
                                                                                 ^~~~~~~~~~~
../Src/hardware_io.c:106:2: note: in expansion of macro 'SET_GREEN_LED'
  SET_GREEN_LED(__USAT((inputBuffer->cv3Input[BUFFER_SIZE] + controls->knob3Value - 2048), 12) >> 1);
  ^~~~~~~~~~~~~
../Src/hardware_io.c:106:16: note: in expansion of macro '__USAT'
  SET_GREEN_LED(__USAT((inputBuffer->cv3Input[BUFFER_SIZE] + controls->knob3Value - 2048), 12) >> 1);
                ^~~~~~
../Src/hardware_io.c: In function 'updateRGBSubAudio':
../Src/hardware_io.c:113:37: error: 'audioRateInputs {aka struct <anonymous>}' has no member named 'cv3Input'; did you mean 'gateInput'?
  SET_GREEN_LED(__USAT((inputBuffer->cv3Input[BUFFER_SIZE] + controls->knob3Value - 2048), 12) * lastSample >> 12);
                                     ^
/Users/willmitchell/Documents/stm32_workspace/drum_rev5/Drivers/STM32F3xx_HAL_Driver/Inc/stm32f3xx_hal_tim_ex.h:922:81: note: in definition of macro '__HAL_TIM_SET_COMPARE'
 (*(__IO uint32_t *)(&((__HANDLE__)->Instance->CCR1) + ((__CHANNEL__) >> 2U)) = (__COMPARE__))
                                                                                 ^~~~~~~~~~~
../Src/hardware_io.c:113:2: note: in expansion of macro 'SET_GREEN_LED'
  SET_GREEN_LED(__USAT((inputBuffer->cv3Input[BUFFER_SIZE] + controls->knob3Value - 2048), 12) * lastSample >> 12);
  ^~~~~~~~~~~~~
../Src/hardware_io.c:113:16: note: in expansion of macro '__USAT'
  SET_GREEN_LED(__USAT((inputBuffer->cv3Input[BUFFER_SIZE] + controls->knob3Value - 2048), 12) * lastSample >> 12);
                ^~~~~~
At top level:
../Src/hardware_io.c:48:13: warning: 'pwmCounter' defined but not used [-Wunused-variable]
  static int pwmCounter;
             ^~~~~~~~~~
make: *** [Src/hardware_io.o] Error 1

23:45:18 Build Finished (took 1s.349ms)

